--- a/flaskapp/templates/sentimentanalysis.html
+++ b/flaskapp/templates/sentimentanalysis.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TextStemmer</title>
+    <title>SentimentAnalysis</title>
 </head>
 
 <body>
-    <h1>Convert to Stemmed Text</h1>
+    <h1>Sentiment Analysis</h1>
     <form method="post" action="#">
         <label for="fname">File name:</label><br>
         <input id="fname" type="text" name="fname" required><br>
